The 2D Canvas functions fillText()/strokeText() should display nothing when maxWidth is less then or equal to zero https://bugs.webkit.org/show_bug.cgi?id=102656

Patch by Rashmi Shyamasundar <rashmi.s2@samsung.com> on 2013-02-13
Reviewed by Dirk Schulze.

The functions fillText()/strokeText() should not display anything when
maxWidth is less than or equal to zero, according to spec :
http://www.w3.org/TR/2dcontext/#text-preparation-algorithm

Source/WebCore:

Test: fast/canvas/canvas-fillText-maxWidth-zero.html

* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore::CanvasRenderingContext2D::drawTextInternal):

LayoutTests:

* fast/canvas/canvas-fillText-invalid-maxWidth-expected.txt: Added.
* fast/canvas/canvas-fillText-invalid-maxWidth.html: Added.
* fast/canvas/canvas-strokeText-invalid-maxWidth-expected.txt: Added.
* fast/canvas/canvas-strokeText-invalid-maxWidth.html: Added.
* fast/canvas/script-tests/canvas-fillText-invalid-maxWidth.js: Added.
* fast/canvas/script-tests/canvas-strokeText-invalid-maxWidth.js: Added.

Canonical link: https://commits.webkit.org/127974@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142754 268f45cc-cd09-0410-ab3c-d52691b4dbfc